css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

//Variables
$lg-breakpoint: 60rem;
$sm-breakpoint: 36rem;
$article-side-padding: 1.25rem;
$zoom-margin: (($sm-breakpoint - ($article-side-padding * 2)) / 2);

// Font Family
.font-avenir { font-family: 'Avenir Next', Avenir, 'Helvetica Neue', helvetica, sans-serif }
.font-menlo, code { font-family: Menlo, Consolas, Monaco, monospace }


// Colors
.color-white { color: #fff }
.color-gray { color: #3f414e }
.color-slate { color: #282b31 }
.color-blue { color: #3498db }

.bg-white { background: #fff }
.bg-gray { background: #3f414e }
.bg-slate { background: #282b31 }
.bg-blue { background: #3498db }


// Global Properties
body { font-size: 1.125rem }
a { color: #3498db }
.section-max-width { max-width: $sm-breakpoint }
.article-side-padding { padding-left: $article-side-padding; padding-right: $article-side-padding }

.post-content img {
    border-radius: .25rem;
}

.post-content p + h1,
.post-content p + h2,
.post-content p + h3,
.post-content p + h4 {
    margin-top: 2.25rem;
}

hr {
    border-width: 1px 0 0 0;
    border-style: solid;
    border-color: #ddd;
    height: 0;
    margin: 2.5rem 0;
}


// Navigation
.navlink-off, .navlink-on { position: relative }
.navlink-off:after, .navlink-on:after {
    content: " ";
    display: block;
    margin: .125rem auto 0;
    width: 0;
    height: .125rem;
    border-radius: .125rem;
    background: rgba(255,255,255,0);
    pointer-events: none;
    transition: all .4s ease;
 }

.navlink-on:after { width: 100%; background: #3498db }
.notouch .navlink-off:hover:after { width: 100%; background: #3498db }

.notouch .article-link { transition: padding 0.2s ease }
.notouch .article-link:hover { padding-left: 0.5rem }

.social-link { color: rgba(0, 0, 0, 0.5); transition: color 0.2s ease }
.notouch .social-link:hover { color: inherit }


// Contact Form
.contact-form input,
.contact-form textarea { border: 2px solid #ddd }

.contact-form input:focus,
.contact-form textarea:focus { border: 2px solid #3498db }


// Zoom
.img-zoom img {
    border-radius: .25rem;
    cursor: pointer;
    width: 100%;
    transition: all 0.4s ease;
}

.img-zoom.zoom img {
    width: 100vw;
    max-width: 100vw;
    margin-left: calc(#{$zoom-margin} - 50vw);   
}

.highlight {
    font-size: small;
    margin: 0;
    padding: .125rem 1.25rem;
    border-radius: .25rem;
    border-left: .25rem solid #3498db;
    overflow-x: auto;
}

.highlighter-rouge {
    font-size: small;
    padding: 0.25rem;
    border-radius: .1875rem;
}

.lg-page .header-tagline { display: none }


// Custom Media Queries
@media (max-width: $sm-breakpoint) {

    body {
        font-size: 1.032rem
    }

    .highlight, .sm-fullbleed {
        margin-left: -$article-side-padding !important;
        margin-right: -$article-side-padding !important;
        border-radius: 0 !important;
    }

    .img-zoom.zoom img {
        margin-left: -$article-side-padding;
    }

}

@media (max-width: $lg-breakpoint) {

    .site-page .sm-header-tagline {
        display: none
    }

    .img-zoom.zoom img {
        border-radius: 0
    }

}

@media (min-width: $lg-breakpoint) {

    .img-zoom.zoom img {
        width: 110vmin;
        max-width: 110vmin;
        margin-left: calc(#{$zoom-margin} - 55vmin);
    }

    .lg-header {
        position: fixed;
        z-index: 1;
        top: 0;
        left: 0;
        width: 35%;
        height: 100vh;
    }

    .lg-page {
        margin-left: 35%;
    }

    .lg-page .lg-nav {
        position: fixed;
        z-index: 2;
        top: 0;
        left: 0;
        width: 35%;
    }

}


// Import partials from `sass_dir` (defaults to `_sass`)
@import
    "tinyset",
    "syntax-highlighting"
;

